--- a/html/galeria.html
+++ b/html/galeria.html
@@ -1,76 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Keywords SEO-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS link -->
-    <link rel="stylesheet" href="/repoTercerentrega/css/tercerEntregacss.css">
+    <meta name="cafe de colombia, preparacion, suscripcion, paisaje cultural cafetero" content="HTML, JS, CSS, SCSS, IMG, JSON">
     <!-- Bootstrap links-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- CSS link -->
+    <link rel="stylesheet" href="/css/entregaFinalcss.css">    
     <!-- Titulo principal -->
     <title>KAFFEE Galería</title>
     <!-- Estilos -->
     <style>
         .welcomeInfo{
-            background-color: gray;
+            background-color: lightgray;
         }
-
     </style>
 </head>
+<!-- MAIN BODY -->
 <body>
-    <header>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="/repoTercerentrega/index.html">KAFFEE</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+  <!-- NAVBAR -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="/index.html">KAFFEE</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link text-white" aria-current="page" href="/repoTercerentrega/html/servicios.html">Servicios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="/repoTercerentrega/html/preparacion.html">Preparación</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="/repoTercerentrega/html/galeria.html">Galería</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="/repoTercerentrega/html/contacto.html">Contacto</a>
-                  </li>
-                </ul>
+                  <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                      <a class="nav-link text-white" aria-current="page" href="/html/servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/html/preparacion.html">Preparación</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/html/contacto.html">Contacto</a>
+                    </li>
+                  </ul>
               </div>
-            </div>
-          </nav>
-    </header>
-    <!-- Main content-->
-    <main>
-        <div class="container-fluid">
-            <div class="row welcomeInfo p-5">
-                <div class="col-5 offset-2 text-white d-flex flex-column justify-content-center">
-                    <h2 class="pb-3">DISFRUTA DEL MEJOR CAFÉ DEL MUNDO</h2>
-                    <p class="vw-50">En 1927 los cafeteros colombianos se unieron con el fin de crear una organización que los representara nacional e internacionalmente, y que velara por su bienestar y el mejoramiento de su calidad de vida.</p>
-                    <p class="vw-50">Colombia ofrece una rica y amplia diversidad de sabores debido a múltiples factores geográficos, climáticos y de procesos que entran en juego a lo largo de toda la cadena de producción del café, desde el cultivo hasta la taza.</p>
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                    <img src="/img/imagen01.png" alt="logo cafe de Colombia">
-                </div>
-            </div>
-        </div>
-    </main>
-    <!-- footer -->
-    <footer>
-        <div class="container">
-            <nav class="navbar fixed-bottom navbar-dark bg-dark">
-                <div class="container-fluid">
-                  <a class="navbar-brand text-white" href="#">Café de Colombia</a>
-                </div>
-              </nav>
-        </div>
-    </footer>
+      </div>
+    </nav>
+  </header>
+  <!-- SECTION MAIN-->
+  <main>
+
+  </main>
+  <!-- SECTION FOOTER -->
+  <footer>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">Café de Colombia (2022)</span>
+      </div>
+    </nav>
+  </footer>
 </body>
 </html>
