--- a/html/servicios.html
+++ b/html/servicios.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Keywords SEO-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta name="cafe de colombia, preparacion, suscripcion, paisaje cultural cafetero" content="HTML, JS, CSS, SCSS, IMG, JSON">
     <!-- Bootstrap links-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- CSS link -->
-    <link rel="stylesheet" href="/css/entregaFinalcss.css">    <!-- Titulo principal -->
-    <title>KAFFEE Index</title>
+    <link rel="stylesheet" href="/css/entregaFinalcss.css">    
+    <!-- Titulo principal -->
+    <title>KAFFEE Servicios</title>
     <!-- Estilos -->
     <style>
         .welcomeInfo{
@@ -20,112 +21,42 @@
 </head>
 <!-- MAIN BODY -->
 <body>
-  <!-- SECTION NAVBAR -->
+  <!-- NAVBAR -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="">KAFFEE</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="/repoTercerentrega/html/servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/repoTercerentrega/html/preparacion.html">Preparación</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/repoTercerentrega/html/galeria.html">Galería</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/repoTercerentrega/html/contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <div class="container-fluid">
+          <a class="navbar-brand" href="/index.html">KAFFEE</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                      <a class="nav-link text-white" aria-current="page" href="">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/html/preparacion.html">Preparación</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/html/galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/html/contacto.html">Contacto</a>
+                    </li>
+                  </ul>
+              </div>
+      </div>
+    </nav>
   </header>
   <!-- SECTION MAIN-->
   <main>
-    <div class="container-fluid">
-        <div class="row welcomeInfo p-5">
-            <div class="col-5 offset-2 text-white d-flex flex-column justify-content-center">
-                <h2 class="pb-3">DISFRUTA DEL MEJOR CAFÉ DEL MUNDO</h2>
-                <p class="vw-50">En 1927 los cafeteros colombianos se unieron con el fin de crear una organización que los representara nacional e internacionalmente, y que velara por su bienestar y el mejoramiento de su calidad de vida.</p>
-                <p class="vw-50">Colombia ofrece una rica y amplia diversidad de sabores debido a múltiples factores geográficos, climáticos y de procesos que entran en juego a lo largo de toda la cadena de producción del café, desde el cultivo hasta la taza.</p>
-            </div>
-            <div class="col-3 d-flex justify-content-center">
-                <img class="d-flex justify-content-center" src="/img/imagen01.png" alt="logo cafe de Colombia">
-            </div>
-        </div>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        This is some text within a card body.
-      </div>
-    </div>
-    <div class="alert alert-warning" role="alert">
-      A simple danger alert—check it out!
-    </div>
-    <div class="card mb-3">
-      <img src="/img/02-tiendaDeCafe.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    <div class="container-flex">
-        <img class="justify-content-center" src="/img/01-Imagen de fondo paisaje.jpg" alt="Paisaje cultural cafetero Colombia">
-    </div>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-    </div>
+
   </main>
   <!-- SECTION FOOTER -->
   <footer>
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand display-block" href="#">
-          <img src="/img/banderaPequena.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-          Producto Colombiano
-        </a>
+        <span class="navbar-brand mb-0 h1">Café de Colombia (2022)</span>
       </div>
     </nav>
   </footer>
