--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Keywords SEO-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta name="cafe de colombia, preparacion, suscripcion, paisaje cultural cafetero" content="HTML, JS, CSS, SCSS, IMG, JSON">
     <!-- Bootstrap links-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- CSS link -->
-    <link rel="stylesheet" href="/css/entregaFinalcss.css">    <!-- Titulo principal -->
+    <link rel="stylesheet" href="/css/entregaFinalcss.css">    
+    <!-- Titulo principal -->
     <title>KAFFEE Index</title>
     <!-- Estilos -->
     <style>
@@ -20,32 +21,32 @@
 </head>
 <!-- MAIN BODY -->
 <body>
-  <!-- SECTION NAVBAR -->
+  <!-- NAVBAR -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
+      <div class="container-fluid">
           <a class="navbar-brand" href="">KAFFEE</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="/repoTercerentrega/html/servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/repoTercerentrega/html/preparacion.html">Preparación</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/repoTercerentrega/html/galeria.html">Galería</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/repoTercerentrega/html/contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                      <a class="nav-link text-white" aria-current="page" href="/html/servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/html/preparacion.html">Preparación</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/html/galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/html/contacto.html">Contacto</a>
+                    </li>
+                  </ul>
+              </div>
+      </div>
+    </nav>
   </header>
   <!-- SECTION MAIN-->
   <main>
@@ -111,10 +112,7 @@
   <footer>
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand display-block" href="#">
-          <img src="/img/banderaPequena.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-          Producto Colombiano
-        </a>
+        <span class="navbar-brand mb-0 h1">Café de Colombia (2022)</span>
       </div>
     </nav>
   </footer>
