Se trabaja en pagina index, ajustando navbar, footer, proporcion de contenidos

--- a/html/preparacion.html
+++ b/html/preparacion.html
@@ -22,7 +22,7 @@
 <!-- MAIN BODY -->
 <body>
   <!-- NAVBAR -->
-  <header>
+  <header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">KAFFEE</a>
@@ -50,13 +50,44 @@
   </header>
   <!-- SECTION MAIN-->
   <main>
+    <div>
+      <div class="row p-5 text-center">
+        <h2>Aprenda de preparación de café</h2>
+      <div>
+        <div class="row p-5">
+          <div class="col-3 text-center">
+            <img class="mb-3" src="/img/imagen02.jpg" width="40%" alt="logo tasa de cafe">
+            <h3>Preparación premium</h3>
+            <p>Tipo de grano y molienda</p>
+          </div>
+          <div class="col-3 text-center">
+            <img class="mb-3" src="/img/imagen02.jpg" width="40%" alt="logo tasa de cafe">
+            <h3>Preparación especial</h3>
+            <p>Tipo de grano y molienda</p>
+          </div>
+          <div class="col-3 text-center">
+            <img class="mb-3" src="/img/imagen02.jpg" width="40%" alt="logo tasa de cafe">
+            <h3>Preparación sencilla</h3>
+            <p>Tipo de grano y molienda</p>
+          </div>
+          <div class="col-3 text-center">
+            <img class="mb-3" src="/img/imagen02.jpg" width="40%" alt="logo tasa de cafe">
+            <h3>Preparación clásica</h3>
+            <p>Tipo de grano y molienda</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+
 
   </main>
   <!-- SECTION FOOTER -->
   <footer>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark fixed bottom">
       <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">Café de Colombia (2022)</span>
+        <span class="navbar-brand mb-0 h1">Café de Colombia</span>
+        <span class="navbar-brand mb-0 h1 ms-auto">Coderhouse - 2022 - Juan S Botero</span>
       </div>
     </nav>
   </footer>
