--- a/html/contacto.html
+++ b/html/contacto.html
@@ -22,7 +22,7 @@
 <!-- MAIN BODY -->
 <body>
   <!-- NAVBAR -->
-  <header>
+  <header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">KAFFEE</a>
@@ -54,9 +54,10 @@
   </main>
   <!-- SECTION FOOTER -->
   <footer>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark fixed bottom">
       <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">Café de Colombia (2022)</span>
+        <span class="navbar-brand mb-0 h1">Café de Colombia</span>
+        <span class="navbar-brand mb-0 h1 ms-auto">Coderhouse - 2022 - Juan S Botero</span>
       </div>
     </nav>
   </footer>
