--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="cafe de colombia, preparacion, suscripcion, paisaje cultural cafetero" content="HTML, JS, CSS, SCSS, IMG, JSON">
+    <!-- Logo favicon -->
+    <link rel="shortcut icon" href="/img/Logo tasa.ico" type="image/x-icon">
+    <!-- GoogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <!-- Bootstrap links-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -22,7 +29,7 @@
 <!-- MAIN BODY -->
 <body>
   <!-- NAVBAR -->
-  <header>
+  <header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
           <a class="navbar-brand" href="">KAFFEE</a>
@@ -50,69 +57,41 @@
   </header>
   <!-- SECTION MAIN-->
   <main>
-
-    <div class="card">
-      <div class="card-body">
-        This is some text within a card body.
+    <div class="container-fluid">
+      <div class="row welcomeInfo p-5">
+          <div class="col-5 offset-2 text-white d-flex flex-column justify-content-center">
+              <h2 class="pb-3">DISFRUTA DEL MEJOR CAFÉ DEL MUNDO</h2>
+              <p class="vw-50">En 1927 los cafeteros colombianos se unieron con el fin de crear una organización que los representara nacional e internacionalmente, y que velara por su bienestar y el mejoramiento de su calidad de vida.</p>
+              <p class="vw-50">Colombia ofrece una rica y amplia diversidad de sabores debido a múltiples factores geográficos, climáticos y de procesos que entran en juego a lo largo de toda la cadena de producción del café, desde el cultivo hasta la taza.</p>
+          </div>
+          <div class="col-3 d-flex justify-content-center">
+              <img src="/repoTercerentrega/img/imagen01.png" alt="logo cafe de Colombia">
+          </div>
       </div>
-    </div>
-    <div class="alert alert-warning" role="alert">
-      A simple danger alert—check it out!
-    </div>
-    <div class="card mb-3">
-      <img src="/img/02-tiendaDeCafe.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
+  </div>
+  <!-- Imagen -->
+  <div class="flex">
+      <img src="/repoTercerentrega/img/01-paisajeCultural.jpg" alt="Paisaje cultural cafetero Colombia">
+  </div>
+    <!-- Título -->
+  <figure class="text-center pt-4">
+    <blockquote class="blockquote">
+      <p>A well-known quote, contained in a blockquote element.</p>
+    </blockquote>
+    <figcaption class="blockquote-footer">
+      Someone famous in <cite title="Source Title">Source Title</cite>
+    </figcaption>
+  </figure>
     <div class="container-flex">
         <img class="justify-content-center" src="/img/01-Imagen de fondo paisaje.jpg" alt="Paisaje cultural cafetero Colombia">
-    </div>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
     </div>
   </main>
   <!-- SECTION FOOTER -->
   <footer>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark fixed bottom">
       <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">Café de Colombia (2022)</span>
+        <span class="navbar-brand mb-0">Café de Colombia</span>
+        <span class="navbar-brand mb-0 ms-auto">Coderhouse - 2022 - Juan S Botero</span>
       </div>
     </nav>
   </footer>
