Se trabaja en avances del index, servicios y preparacón, definiendo copy text

--- a/html/servicios.html
+++ b/html/servicios.html
@@ -50,7 +50,31 @@
   </header>
   <!-- SECTION MAIN-->
   <main>
-
+    <figure class="container-flex text-center pt-4">
+      <blockquote class="blockquote">
+        <p>Solución para el que planea consumir diariamente, mensualmente, fidelidad al producto local;
+          orden digital fácil de pago y envío.</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+          Solución de aplicación móvil que le permite al usuario seleccionar productos de la tienda
+          en línea de café de Colombia y recibirlos domicilio.<cite title="Source Title"> Aplicación de café</cite>
+      </figcaption>
+  <!-- Imagen-->
+  <div class="card">
+      <img src="/img/02-tiendaDeCafe.jpg" class="card-img-top" alt="Granos de cafe">
+      <div class="card-body">
+        <h5 class="card-title ml-3">Funcionalidades</h5>
+        <p class="card-text">- Tienda en línea de productos de café de Colombia PCC. Se hacen envíos
+          nacionales e internacionales seleccionando diferentes tipos, gramajes,
+          presentaciones y métodos de consumo.</p>
+        <p class="card-text">- Programa de suscripción mensual de café (Premium/Especial) que le permite al
+          usuario frecuente un ahorro económico.</p>
+        <p class="card-text">- Información y conocimiento de la producción, características generales del
+          producto, métodos de preparación y cultura en general.</p>        
+        <p class="card-text">- Contacto comercial, seguimientos de ordenes compras y envíos de productos.</p>          
+        <p class="card-text"><small class="text-muted">Minimun Viable Product</small></p>
+      </div>
+    </div>  
   </main>
   <!-- SECTION FOOTER -->
   <footer>
