--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Estilos -->
     <style>
         .welcomeInfo{
-            background-color: lightgray;
+            background-color: gray;
         }
     </style>
 </head>
@@ -65,22 +65,21 @@
               <p class="vw-50">Colombia ofrece una rica y amplia diversidad de sabores debido a múltiples factores geográficos, climáticos y de procesos que entran en juego a lo largo de toda la cadena de producción del café, desde el cultivo hasta la taza.</p>
           </div>
           <div class="col-3 d-flex justify-content-center">
-              <img src="/repoTercerentrega/img/imagen01.png" alt="logo cafe de Colombia">
+              <img src="/img/logoKaffee.png" alt="logo cafe de Colombia">
           </div>
       </div>
   </div>
-  <!-- Imagen -->
-  <div class="flex">
-      <img src="/repoTercerentrega/img/01-paisajeCultural.jpg" alt="Paisaje cultural cafetero Colombia">
-  </div>
-    <!-- Título -->
-  <figure class="text-center pt-4">
+  <!-- Título -->
+  <figure class="container-flex text-center pt-4">
     <blockquote class="blockquote">
-      <p>A well-known quote, contained in a blockquote element.</p>
+      <p>¿Sabías que el café que consumes a diario se produce y se exporta desde regiones del planeta que son declaradas patrimonio de la humanidad
+        (UNESCO) por sus culturas y costumbres particulares? Pero además ¿que las nuevas generaciones de consumidores demandan un tipo de consumo de
+        café especial responsable con su entorno natural y social?</p>
     </blockquote>
     <figcaption class="blockquote-footer">
-      Someone famous in <cite title="Source Title">Source Title</cite>
+      Paisaje Cultural Cafetero<cite title="Source Title"> Declaración UNESCO</cite>
     </figcaption>
+  <!-- Imagen -->
   </figure>
     <div class="container-flex">
         <img class="justify-content-center" src="/img/01-Imagen de fondo paisaje.jpg" alt="Paisaje cultural cafetero Colombia">
