Se trabajo en pagina index, resuelta, avances en las otras paginas, diseño proporcion y estilo

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -50,6 +50,38 @@
   </header>
   <!-- SECTION MAIN-->
   <main>
+    <figure class="container text-center pt-4">
+      <blockquote class="blockquote">
+        <p>Contactenos</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+          Nos puedes encontrar en redes sociales</figcaption>
+    </figure>
+
+    <div class="container">
+      <img class="justify-content-center" src="/img/05-contacto.jpg" alt="kit de preparacion de cafe">
+    </div>
+    <div class="container">
+      <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+  
+
+
+    </div>
 
   </main>
   <!-- SECTION FOOTER -->
