--- a/html/preparacion.html
+++ b/html/preparacion.html
@@ -50,28 +50,39 @@
   </header>
   <!-- SECTION MAIN-->
   <main>
+    <figure class="container text-center pt-4">
+      <blockquote class="blockquote">
+        <p>Servicios y tipos de preparación</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+          Plan de consumo diario y mensual, defina su preparación</figcaption>
+    </figure>
+    <div class="container justify-content-center">
+        <img class="justify-content-center" src="/img/04-kitPreparacion.jpg" alt="kit de preparacion de cafe">
+    </div>
+
     <div>
-      <div class="row p-5 text-center">
+      <div class="container-fluid row p-5 text-center">
         <h2>Aprenda de preparación de café</h2>
       <div>
         <div class="row p-5">
           <div class="col-3 text-center">
-            <img class="mb-3" src="/img/imagen02.jpg" width="40%" alt="logo tasa de cafe">
+            <img class="mb-3" src="/img/preparacion1.png" width="90%" alt="logo tasa de cafe">
             <h3>Preparación premium</h3>
             <p>Tipo de grano y molienda</p>
           </div>
           <div class="col-3 text-center">
-            <img class="mb-3" src="/img/imagen02.jpg" width="40%" alt="logo tasa de cafe">
+            <img class="mb-3" src="/img/preparacion2.png" width="90%" alt="logo tasa de cafe">
             <h3>Preparación especial</h3>
             <p>Tipo de grano y molienda</p>
           </div>
           <div class="col-3 text-center">
-            <img class="mb-3" src="/img/imagen02.jpg" width="40%" alt="logo tasa de cafe">
+            <img class="mb-3" src="/img/preparacion3.png" width="90%" alt="logo tasa de cafe">
             <h3>Preparación sencilla</h3>
             <p>Tipo de grano y molienda</p>
           </div>
           <div class="col-3 text-center">
-            <img class="mb-3" src="/img/imagen02.jpg" width="40%" alt="logo tasa de cafe">
+            <img class="mb-3" src="/img/preparacion4.png" width="90%" alt="logo tasa de cafe">
             <h3>Preparación clásica</h3>
             <p>Tipo de grano y molienda</p>
           </div>
