--- a/index.html
+++ b/index.html
@@ -70,21 +70,23 @@
       </div>
   </div>
   <!-- Título -->
-  <figure class="container-flex text-center pt-4">
-    <blockquote class="blockquote">
-      <p>¿Sabías que el café que consumes a diario se produce y se exporta desde regiones del planeta que son declaradas patrimonio de la humanidad
-        (UNESCO) por sus culturas y costumbres particulares? Pero además ¿que las nuevas generaciones de consumidores demandan un tipo de consumo de
-        café especial responsable con su entorno natural y social?</p>
-    </blockquote>
-    <figcaption class="blockquote-footer">
-      Paisaje Cultural Cafetero<cite title="Source Title"> Declaración UNESCO</cite>
-    </figcaption>
-  <!-- Imagen -->
-  </figure>
-    <div class="container-flex">
-        <img class="justify-content-center" src="/img/01-Imagen de fondo paisaje.jpg" alt="Paisaje cultural cafetero Colombia">
-    </div>
-  </main>
+  <div class="container">
+    <figure class="container-flex text-center pt-4">
+      <blockquote class="blockquote">
+        <p>¿Sabías que el café que consumes a diario se produce y se exporta desde regiones del planeta que son declaradas patrimonio de la humanidad
+          (UNESCO) por sus culturas y costumbres particulares? Pero además ¿que las nuevas generaciones de consumidores demandan un tipo de consumo de
+          café especial responsable con su entorno natural y social?</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        Paisaje Cultural Cafetero<cite title="Source Title"> Declaración UNESCO</cite>
+      </figcaption>
+    <!-- Imagen -->
+    </figure>
+      <div class="container">
+          <img class="container justify-content-center" src="/img/01-Imagen de fondo paisaje.jpg" width="100%" alt="Paisaje cultural cafetero Colombia">
+      </div>
+    </main>
+  </div>
   <!-- SECTION FOOTER -->
   <footer>
     <nav class="navbar navbar-dark bg-dark fixed bottom">
