Se terminan ajustes generales en index, servicios, preparacion, galeria, contacto

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -59,9 +59,9 @@
     </figure>
 
     <div class="container">
-      <img class="justify-content-center" src="/img/05-contacto.jpg" alt="kit de preparacion de cafe">
+      <img class="container justify-content-center" src="/img/05-contacto.jpg" width="100%" alt="kit de preparacion de cafe">
     </div>
-    <div class="container">
+    <div class="container pb-5">
       <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
