--- a/html/servicios.html
+++ b/html/servicios.html
@@ -60,7 +60,7 @@
           en línea de café de Colombia y recibirlos domicilio.<cite title="Source Title"> Aplicación de café</cite>
       </figcaption>
   <!-- Imagen-->
-  <div class="card">
+  <div class="container card">
       <img src="/img/02-tiendaDeCafe.jpg" class="card-img-top" alt="Granos de cafe">
       <div class="card-body">
         <h5 class="card-title ml-3">Funcionalidades</h5>
