Se hacen todos los ajustes y redimensiones, sitio web listo para entregaFinal, gracias por la revisión

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -13,11 +13,12 @@
     <!-- Titulo principal -->
     <title>KAFFEE Contacto</title>
     <!-- Estilos -->
+    <!-- 
     <style>
         .welcomeInfo{
             background-color: lightgray;
         }
-    </style>
+    </style>-->
 </head>
 <!-- MAIN BODY -->
 <body>
@@ -50,18 +51,19 @@
   </header>
   <!-- SECTION MAIN-->
   <main>
-    <figure class="container text-center pt-4">
-      <blockquote class="blockquote">
-        <p>Contactenos</p>
-      </blockquote>
-      <figcaption class="blockquote-footer">
-          Nos puedes encontrar en redes sociales</figcaption>
-    </figure>
-
+    <div class="container">
+      <figure class="container text-center pt-4">
+        <blockquote class="blockquote">
+          <p>CONTACTANOS</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            Tambien nos puedes encontrar en redes sociales</figcaption>
+      </figure>
+    </div>
     <div class="container">
       <img class="container justify-content-center" src="/img/05-contacto.jpg" width="100%" alt="kit de preparacion de cafe">
     </div>
-    <div class="container pb-5">
+    <div class="container pb-5 pt-5">
       <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
