--- a/html/preparacion.html
+++ b/html/preparacion.html
@@ -13,11 +13,12 @@
     <!-- Titulo principal -->
     <title>KAFFEE Preparación</title>
     <!-- Estilos -->
+    <!-- 
     <style>
         .welcomeInfo{
             background-color: lightgray;
         }
-    </style>
+    </style>-->
 </head>
 <!-- MAIN BODY -->
 <body>
@@ -52,7 +53,7 @@
   <main>
     <figure class="container text-center pt-4">
       <blockquote class="blockquote">
-        <p>Servicios y tipos de preparación</p>
+        <p>SERVICIOS Y TIPOS DE PREPARACIÓN</p>
       </blockquote>
       <figcaption class="blockquote-footer">
           Plan de consumo diario y mensual, defina su preparación</figcaption>
@@ -60,7 +61,6 @@
     <div class="container justify-content-center">
         <img class="justify-content-center" src="/img/04-kitPreparacion.jpg" alt="kit de preparacion de cafe">
     </div>
-
     <div>
       <div class="container-fluid row p-5 text-center">
         <h2>Aprenda de preparación de café</h2>
@@ -69,29 +69,36 @@
           <div class="col-3 text-center">
             <img class="mb-3" src="/img/preparacion1.png" width="90%" alt="logo tasa de cafe">
             <h3>Preparación premium</h3>
-            <p>Tipo de grano y molienda</p>
+            <p>1 CAFÉ AL DÍA
+              Te entregamos cada mes directamente a tu Casa:
+              1 bolsa de 340 g de Café KAFFEE.APP para tener tu café fresco cada mañana durante un año</p>
           </div>
           <div class="col-3 text-center">
             <img class="mb-3" src="/img/preparacion2.png" width="90%" alt="logo tasa de cafe">
             <h3>Preparación especial</h3>
-            <p>Tipo de grano y molienda</p>
+            <p>2 CAFÉS AL DÍA
+              Te entregamos cada mes:
+              2 bolsas de 340 g de Café KAFFEE.APP recién tostado para tener tu café fresco cada mañana durante un año</p>
           </div>
           <div class="col-3 text-center">
             <img class="mb-3" src="/img/preparacion3.png" width="90%" alt="logo tasa de cafe">
             <h3>Preparación sencilla</h3>
-            <p>Tipo de grano y molienda</p>
+            <p>
+              5 CAFÉS AL DÍA
+              Te entregamos cada mes:
+              4 bolsas de 340 g de Café KAFFEE.APP recién tostado para tener tu café fresco cada mañana durante un año</p>
           </div>
           <div class="col-3 text-center">
             <img class="mb-3" src="/img/preparacion4.png" width="90%" alt="logo tasa de cafe">
             <h3>Preparación clásica</h3>
-            <p>Tipo de grano y molienda</p>
+            <p>FILTRO Y JARRA
+              Te entregamos un kit básico de preparación y 4 bolsas de 340 g de Café KAFFEE.APP recién tostado para tener tu café fresco cada mañana
+            </p>
           </div>
         </div>
       </div>
       </div>
     </div>
-
-
   </main>
   <!-- SECTION FOOTER -->
   <footer>
