--- a/html/servicios.html
+++ b/html/servicios.html
@@ -13,11 +13,12 @@
     <!-- Titulo principal -->
     <title>KAFFEE Servicios</title>
     <!-- Estilos -->
+    <!-- 
     <style>
         .welcomeInfo{
             background-color: lightgray;
         }
-    </style>
+    </style> -->
 </head>
 <!-- MAIN BODY -->
 <body>
@@ -50,34 +51,61 @@
   </header>
   <!-- SECTION MAIN-->
   <main>
-    <figure class="container-flex text-center pt-4">
-      <blockquote class="blockquote">
-        <p>Solución para el que planea consumir diariamente, mensualmente, fidelidad al producto local;
-          orden digital fácil de pago y envío.</p>
-      </blockquote>
-      <figcaption class="blockquote-footer">
+    <div class="container">
+      <figure class="container-flex text-center pt-4">
+        <blockquote class="blockquote">
+          <p>SERVICIOS KAFFEE.APP, Es la solución para el que planea consumir diariamente, mensualmente, fidelidad al producto local;
+            orden digital fácil de pago y envío.</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
           Solución de aplicación móvil que le permite al usuario seleccionar productos de la tienda
-          en línea de café de Colombia y recibirlos domicilio.<cite title="Source Title"> Aplicación de café</cite>
-      </figcaption>
-  <!-- Imagen-->
-  <div class="container card">
-      <img src="/img/02-tiendaDeCafe.jpg" class="card-img-top" alt="Granos de cafe">
-      <div class="card-body">
-        <h5 class="card-title ml-3">Funcionalidades</h5>
-        <p class="card-text">- Tienda en línea de productos de café de Colombia PCC. Se hacen envíos
-          nacionales e internacionales seleccionando diferentes tipos, gramajes,
-          presentaciones y métodos de consumo.</p>
-        <p class="card-text">- Programa de suscripción mensual de café (Premium/Especial) que le permite al
-          usuario frecuente un ahorro económico.</p>
-        <p class="card-text">- Información y conocimiento de la producción, características generales del
-          producto, métodos de preparación y cultura en general.</p>        
-        <p class="card-text">- Contacto comercial, seguimientos de ordenes compras y envíos de productos.</p>          
-        <p class="card-text"><small class="text-muted">Minimun Viable Product</small></p>
+            en línea de café de Colombia y recibirlos domicilio.<cite title="Source Title"> Aplicación de café</cite>
+        </figcaption>
+      </figure>
+
+    </div>
+    <div class="bg">
+      <div class="container">
+        <img class="" src="/img/bannerArriba.png" width="100%" alt="tipos de granos">
+      </div>  
+    </div>
+    <div class="container">
+      <figure class="container-flex text-center pt-4 pb-4">
+        <blockquote class="blockquote">
+          <p>KAFFEE.APP Es la solución para el que planea consumir diariamente, mensualmente, fidelidad al producto local;
+            orden digital fácil de pago y envío.</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+          ¿Te motivas a tomar una excelente tasa de cafè de Colombia?. Podrías ser parte de una nueva cultura de consumo y preparación de productos de café.
+          Recuerda que con tu compra en línea estas apoyando productores locales lo cuales se sienten comprometidos con brindar un excelente producto.
+          También puedes visitar nuestras redes sociales y así compartir tu experiencia cafetera. Agradecemos el interes en nuestros productos y servicios, para más
+          información puedes contactarnos directamente desde la app mobile y/o escribirnos a nuestro correo contacto@drinkkaffee.com.co<cite title="Source Title"> Nuevas experiencias de consumo.</cite>
+        </figcaption>
       </div>
-    </div>  
+    <!-- Imagen Card -->
+    <div class="container card">
+        <img src="/img/02-tiendaDeCafe.jpg" class="card-img-top" alt="Granos de cafe">
+        <div class="card-body">
+          <h5 class="card-title ml-3">Funcionalidades</h5>
+          <p class="card-text">- Tienda en línea de productos de café de Colombia PCC. Se hacen envíos
+            nacionales e internacionales seleccionando diferentes tipos, gramajes,
+            presentaciones y métodos de consumo.</p>
+          <p class="card-text">- Programa de suscripción mensual de café (Premium/Especial) que le permite al
+            usuario frecuente un ahorro económico.</p>
+          <p class="card-text">- Información y conocimiento de la producción, características generales del
+            producto, métodos de preparación y cultura en general.</p>        
+          <p class="card-text">- Contacto comercial, seguimientos de ordenes compras y envíos de productos.</p>          
+          <p class="card-text"><small class="text-muted">Minimun Viable Product</small></p>
+        </div>
+      </div>
   </main>
   <!-- SECTION FOOTER -->
   <footer>
+    <div class="bg">
+      <div class="container">
+        <img class="" src="/img/bannerAbajo.png" width="100%" alt="proceso de granos">
+      </div>  
+    </div>
     <nav class="navbar navbar-dark bg-dark fixed bottom">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">Café de Colombia</span>
