--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Estilos -->
     <style>
         .welcomeInfo{
-            background-color: gray;
+            background-color: rgba(16, 145, 16, 0.74);
         }
     </style>
 </head>
@@ -68,25 +68,39 @@
               <img src="/img/logoKaffee.png" alt="logo cafe de Colombia">
           </div>
       </div>
-  </div>
-  <!-- Título -->
-  <div class="container">
-    <figure class="container-flex text-center pt-4">
-      <blockquote class="blockquote">
-        <p>¿Sabías que el café que consumes a diario se produce y se exporta desde regiones del planeta que son declaradas patrimonio de la humanidad
-          (UNESCO) por sus culturas y costumbres particulares? Pero además ¿que las nuevas generaciones de consumidores demandan un tipo de consumo de
-          café especial responsable con su entorno natural y social?</p>
-      </blockquote>
-      <figcaption class="blockquote-footer">
-        Paisaje Cultural Cafetero<cite title="Source Title"> Declaración UNESCO</cite>
-      </figcaption>
-    <!-- Imagen -->
-    </figure>
-      <div class="container">
-          <img class="container justify-content-center" src="/img/01-Imagen de fondo paisaje.jpg" width="100%" alt="Paisaje cultural cafetero Colombia">
-      </div>
-    </main>
-  </div>
+    </div>
+    <!-- Título -->
+    <div class="container">
+      <figure class="container-flex text-center pt-4">
+        <blockquote class="blockquote">
+          <p>¿Sabías que el café que consumes a diario se produce y se exporta desde regiones del planeta que son declaradas patrimonio de la humanidad
+            (UNESCO) por sus culturas y costumbres particulares? Pero además ¿que las nuevas generaciones de consumidores demandan un tipo de consumo de
+            café especial responsable con su entorno natural y social?</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+          Paisaje Cultural Cafetero<cite title="Source Title"> Declaración UNESCO</cite>
+        </figcaption>
+      </figure>
+      <!-- Imagen card -->
+      <div class="container pb-5">
+            <img class="container justify-content-center" src="/img/01-Imagen de fondo paisaje.jpg" width="100%" alt="Paisaje cultural cafetero Colombia">
+        </div>
+        <div class="container pb-5">
+          <figure class="container-flex text-center pt-4">
+            <blockquote class="blockquote">
+              <p>Kaffee app,
+                a través de la aplicación móvil podemos dar a conocer una amplia oferta de productos de café de Colombia desde empaques de granos de café
+                premium, suscripciones mensuales y kits de preparación para así aprovechar todas las cualidades del producto. Tenga en cuenta que la palabra kaffee
+                proviene del idioma alemán ya que el objetivo principal es presentar la marca a nivel internacional y así poder proyectar un mensaje atractivo para
+                nuestro público objetivo el cual podrá disfrutar de una experiencia de sensaciones y sabores consumiendo el mejor grano de cafè del mundo.</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+              Nuevas experiencias de consumo.<cite title="Source Title"> Tienda en línea</cite>
+            </figcaption>
+          </figure>
+        </div>
+    </div>
+  </main>
   <!-- SECTION FOOTER -->
   <footer>
     <nav class="navbar navbar-dark bg-dark fixed bottom">
