--- a/html/galeria.html
+++ b/html/galeria.html
@@ -13,11 +13,12 @@
     <!-- Titulo principal -->
     <title>KAFFEE Galería</title>
     <!-- Estilos -->
+    <!-- 
     <style>
         .welcomeInfo{
             background-color: lightgray;
         }
-    </style>
+    </style>-->
 </head>
 <!-- MAIN BODY -->
 <body>
@@ -52,13 +53,13 @@
   <main>
     <figure class="container text-center pt-4">
       <blockquote class="blockquote">
-        <p>Galería de imagenes</p>
+        <p>GALERÍA DE IMAGENES</p>
       </blockquote>
       <figcaption class="blockquote-footer">
           Conozca nuestros productos</figcaption>
     </figure>
     
-    <div class="container">
+    <div class="container mb-5">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -67,24 +68,24 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/05-contacto.jpg" class="d-block w-100" alt="...">
+            <img src="/img/fincaCafetera.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Tradición Cafetera</h5>
+              <p>Arquitectura de la región y produccion de Café.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/img/05-contacto.jpg" class="d-block w-100" alt="...">
+            <img src="/img/granosMadurosRojos.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Selección Manual</h5>
+              <p>Trabajo con comunidades locales, formación en procesos de recolección.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/img/05-contacto.jpg" class="d-block w-100" alt="...">
+            <img src="/img/secadoGranos.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Secado Final</h5>
+              <p>Producción de Café de selección mundial, tipo exportación.</p>
             </div>
           </div>
         </div>
@@ -96,7 +97,8 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>    </div>
+      </div>    
+    </div>
 
   </main>
   <!-- SECTION FOOTER -->
