Ajustes finales, version entregaFInal

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -51,7 +51,7 @@
   </header>
   <!-- SECTION MAIN-->
   <main>
-    <div class="container">
+    <div class="container pb-3">
       <figure class="container text-center pt-4">
         <blockquote class="blockquote">
           <p>CONTACTANOS</p>
@@ -63,7 +63,7 @@
     <div class="container">
       <img class="container justify-content-center" src="/img/05-contacto.jpg" width="100%" alt="kit de preparacion de cafe">
     </div>
-    <div class="container pb-5 pt-5">
+    <div class="container pb-5 pt-5 px-5">
       <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -80,11 +80,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-  
-
-
     </div>
-
   </main>
   <!-- SECTION FOOTER -->
   <footer>
