--- a/html/servicios.html
+++ b/html/servicios.html
@@ -62,7 +62,6 @@
             en línea de café de Colombia y recibirlos domicilio.<cite title="Source Title"> Aplicación de café</cite>
         </figcaption>
       </figure>
-
     </div>
     <div class="bg">
       <div class="container">
@@ -101,7 +100,7 @@
   </main>
   <!-- SECTION FOOTER -->
   <footer>
-    <div class="bg">
+    <div class="bg pb-5">
       <div class="container">
         <img class="" src="/img/bannerAbajo.png" width="100%" alt="proceso de granos">
       </div>  
